<resources>
    <string name="app_name">Medica</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="your_name">YOUR NAME</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="or">or</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="login_in_with_facebook">Login in with Facebook</string>
    <string name="login_in_with_google">Login in with Google</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_without_space">Signup</string>
    <string name="name">Name</string>
    <string name="you_are_a_doctor">You are a doctor?</string>
    <string name="you_are_a_user">You are a user?</string>
    <string-array name="titles">
        <item>Title</item>
        <item>Dr</item>
        <item>Dr</item>
        <item>Dr</item>
        <item>Dr</item>
        <item>Dr</item>
    </string-array>

</resources>
