<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ammar.medica.UserSignUpFragment"
    android:paddingLeft="44dp"
    android:paddingRight="44dp"
    android:paddingTop="39dp"
    android:id="@+id/content_view">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_without_space"
        android:fontFamily="@font/roboto_bold"
        android:textSize="24sp"
        android:textColor="@color/text_color"
        android:id="@+id/sign_up_Top"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/sign_up_Top"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="22dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/college_graduation_green"/>

        <Spinner
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:id="@+id/titles_spinner"
            android:layout_marginTop="3dp"
            android:scrollbarSize="60dp"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/round_account_button_with_user_inside_green"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="#003539"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            app:met_baseColor="#003539"
            app:met_primaryColor="#003539"
            app:met_errorColor="#ff4346"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelTextColor="#428E92"
            app:met_floatingLabelTextSize="12sp"
            app:met_textColorHint="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_email_green_24dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#003539"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            app:met_baseColor="#003539"
            app:met_primaryColor="#003539"
            app:met_errorColor="#ff4346"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelTextColor="#428E92"
            app:met_floatingLabelTextSize="12sp"
            app:met_textColorHint="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/phone_number"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/call_answer_512_green"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textAllCaps="false"
            android:textColorHint="#003539"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            app:met_baseColor="#003539"
            app:met_primaryColor="#003539"
            app:met_errorColor="#ff4346"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelTextColor="#428E92"
            app:met_floatingLabelTextSize="12sp"
            app:met_textColorHint="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_lock_green_24dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textAllCaps="false"
            android:textColorHint="#003539"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            app:met_baseColor="#003539"
            app:met_primaryColor="#003539"
            app:met_errorColor="#ff4346"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelTextColor="#428E92"
            app:met_floatingLabelTextSize="12sp"
            app:met_textColorHint="@color/text_color"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/confirm_Password"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_lock_green_24dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="235dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textAllCaps="false"
            android:textColorHint="#003539"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            app:met_baseColor="#003539"
            app:met_primaryColor="#003539"
            app:met_errorColor="#ff4346"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelTextColor="#428E92"
            app:met_floatingLabelTextSize="12sp"
            app:met_textColorHint="@color/text_color"/>

    </LinearLayout>

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/sign_up"
        android:layout_width="270dp"
        android:layout_height="45dp"
        fancy:fb_defaultColor="@color/botton_color"
        fancy:fb_radius="23dp"
        fancy:fb_text="@string/sign_up"
        fancy:fb_textGravity="center_horizontal"
        fancy:fb_textSize="20sp"
        android:textColor="@color/White"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_Password"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_are_a_user"
        android:id="@+id/you_are_a_doctor"
        app:layout_constraintHorizontal_bias="0.3"
        android:textColor="#428E92"
        android:fontFamily="@font/roboto_regular"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/sign_up"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:layout_marginTop="18dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginLeft="1dp"
        android:textColor="#428E92"
        android:fontFamily="@font/roboto_medium"
        android:textSize="14sp"
        android:id="@+id/sign_up_TV"
        app:layout_constraintStart_toEndOf="@id/you_are_a_doctor"
        app:layout_constraintTop_toBottomOf="@id/sign_up"
        android:layout_marginTop="18dp"/>
</android.support.constraint.ConstraintLayout>
